<resources>
    <string name="app_name">AnimeFLV</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="expand">expand</string>
    <string name="shrink">shrink</string>

    <string name="next">Siguiente</string>
    <string name="back">Atras</string>

    <string name="done">Hecho</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="presents">Sugerido</string>
    <string name="custom">Modificar</string>

    <string name="paypal_desc">Hacer una donacion por paypal, puedes dar la cantidad que quieras!</string>
    <string name="patreon_desc">Unete al patreon, puedes donar mensualmente la cantidad que quieras :D</string>
    <string name="bitcoin_desc">Si tienes algun bitcoin que te sobre puedes enviarmelo ;)</string>

    <string-array name="time_bypass">
        <item>30 segundos</item>
        <item>1 minuto</item>
        <item>2 minutos</item>
    </string-array>
    <string-array name="time_val_bypass">
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
    </string-array>
    <string-array name="sug_order">
        <item>Primero nuevos</item>
        <item>Primero viejos</item>
    </string-array>

    <string-array name="minutos">
        <item>1 minuto</item>
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
    </string-array>
    <string-array name="min_val">
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
    </string-array>
    <string-array name="tipos">
        <item>Solo WiFi</item>
        <item>Solo Datos Moviles</item>
        <item>WiFi + Datos Moviles</item>
        <item>Todos</item>
    </string-array>
    <string-array name="players">
        <item>Interno</item>
        <item>Externo</item>
    </string-array>
    <string-array name="busqueda">
        <item>Automática</item>
        <item>Manual</item>
    </string-array>
    <string-array name="list_styles">
        <item>Normal</item>
        <item>Play Store</item>
    </string-array>
    <string-array name="busqueda_sort">
        <item>Por Nombre</item>
        <item>Por Fecha de Salida</item>
        <item>Por Fecha de Salida (Invertido)</item>
    </string-array>
    <string-array name="players_type">
        <item>Simple</item>
        <item>Avanzado</item>
        <!--<item>Exo</item>     Desactivado-->
    </string-array>
    <string-array name="sort_type">
        <item>Sin Ordenar</item>
        <item>Por Nombre</item>
        <item>Por ID</item>
        <item>Por ID - Invertido</item>
    </string-array>
    <string-array name="sound_ind">
        <item>Ninguno</item>
        <item>Notificacion</item>
        <item>Flotante</item>
    </string-array>
    <string-array name="download_name">
        <item>Ninguno</item>
        <item>Izanagi</item>
        <item>Minhateca</item>
        <item>Yotta</item>
        <item>Yotta 720p</item>
        <item>Yotta 480p</item>
        <item>Yotta 360p</item>
        <item>Hyperion</item>
        <item>Hyperion Direct</item>
        <item>Hyperion 360p</item>
        <item>Hyperion 480p</item>
        <item>Hyperion 720p</item>
        <item>Clup</item>
        <item>Fire</item>
        <item>RV 360</item>
        <item>RV 480</item>
        <item>RV 720</item>
        <!--<item>Openload</item>-->
        <item>Mp4Upload</item>
        <item>YourUpload</item>
        <item>Zippyshare</item>
        <item>4Sync</item>
        <item>Mega</item>
        <item>Animeflv</item>
        <item>Maru</item>
    </string-array>
    <string name="title_activity_ads">ADS</string>
    <string name="description">Player</string>

    <string name="next_level">Mostrar Publicidad</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_1">ca-app-pub-5390653757953587/4544823957</string>
    <string name="interstitial_ad_2">ca-app-pub-5390653757953587/8835422755</string>
    <string name="interstitial_ad_3">ca-app-pub-5390653757953587/4265622352</string>

    <string name="ad_top_1">ca-app-pub-5390653757953587/5103227158</string>
    <string name="ad_top_2">ca-app-pub-5390653757953587/9114624355</string>
    <string name="ad_bottom_1">ca-app-pub-5390653757953587/1591357550</string>
    <string name="ad_bottom_2">ca-app-pub-5390653757953587/3068090750</string>

    <string name="banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="bannersizes_largesizes">
        <item>Banner</item>
        <item>Large Banner</item>
        <item>Smart Banner</item>
        <item>Full Banner</item>
        <item>Medium Rectangle</item>
        <item>Leaderboard</item>
    </string-array>

    <string-array name="bannersizes_smallsizes">
        <item>Banner</item>
        <item>Large Banner</item>
        <item>Smart Banner</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="color_chooser_prim">Selecciona un tema:</string>
    <string name="color_chooser">Elige un color:</string>
    <array name="custom_colors">
        <item>#EDEDED</item>
        <item>#ffff8800</item>
        <item>#9E9E9E</item>
        <item>#4CAF50</item>
        <item>#E91E63</item>
        <item>#9C27B0</item>
        <item>#ffcc0000</item>
    </array>

    <array name="days">
        <item>Sin Dia</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </array>

    <string name="intro_title_1">¡¡Bienvenido!!</string>
    <string name="intro_desc_1">Esta es la app No Oficial de AnimeFLV</string>

    <string name="intro_title_1_1">¡¡Bienvenido de nuevo!!</string>
    <string name="intro_desc_1_1">Tus configuraciones han sido restauradas</string>

    <string name="intro_title_2">Últimos episodios</string>
    <string name="intro_desc_2">Ponte al día con los últimos episodios agregados</string>

    <string name="intro_title_3">Descarga y Streaming</string>
    <string name="intro_desc_3">Puedes descargar cualquier episodio o verlo en línea</string>

    <string name="intro_title_4">Modo obscuro</string>
    <string name="intro_desc_4">La pantalla gastara menos bateria&#8230; O simplemente para que se vea mas pro</string>

    <string name="intro_title_5">Informacion de Anime</string>
    <string name="intro_desc_5">Lee los resúmenes, entérate de los datos técnicos y conoce producciones similares de tus animes preferidos</string>

    <string name="intro_title_6">Navegacion sencilla</string>
    <string name="intro_desc_6">Encuentra todo en el menú lateral de la aplicación: favoritos, descargas, sugerencias y mucho más</string>

    <string name="intro_title_7">Favoritos</string>
    <string name="intro_desc_7">Guarda tus animes preferidos localmente o en la nube</string>

    <string name="intro_title_8">Mantente al tanto</string>
    <string name="intro_desc_8">Entérate al instante de los últimos episodios subidos a AnimeFLV</string>

    <string name="intro_title_9">Configuracion</string>
    <string name="intro_desc_9">Muchas configuraciones a modificar</string>

    <string name="intro_title_10">Sin publicidad</string>
    <string name="intro_desc_10">Disfruta de tus animes sin molestos anuncios. Una aplicación hecha con amor por fans para fans ;)</string>

    <string name="intro_title_11">¡Listo!</string>
    <string name="intro_desc_11">Hemos terminado esta breve introducción, ya puedes disfrutar de la app :)</string>


    <string name="tutorial_main">Bienvenido al tutorial, aquí veras una explicación rapida de las funciones de la a app.</string>

    <string name="shortcut_dir">Directorio</string>
    <string name="shortcut_dir_long">Abrir Directorio</string>

    <string name="shortcut_favs">Favoritos</string>
    <string name="shortcut_favs_long">Abrir Favoritos</string>

    <string name="shortcut_em">Siguiendo</string>
    <string name="shortcut_em_long">Abrir Siguiendo</string>

    <string name="no_open">No se puede abrir</string>

    <string name="app_key">stz1g2qeh9nldga</string>
    <string name="app_secret">od4i0crlfzmw1hj</string>

    <string name="com.zendesk.sdk.url" translatable="false">https://fabric-jordyamchotmailcom.zendesk.com</string>
    <string name="com.zendesk.sdk.identifier" translatable="false">bb6267051481163d3fea4e98f1ca016488b5da0c25e0c0b4</string>
    <string name="com.zendesk.sdk.clientIdentifier" translatable="false">mobile_sdk_client_4b7e15fc9bf5a9fc9265</string>
    <string name="title_activity_tvmain">TVMain</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
